# timepro

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml
apps/api/: Dockerfile  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api.rs  commands.rs  lib.rs  logship.rs  main.rs  state.rs
apps/desktop/src-tauri/src/capture/: activity.rs  apps.rs  idle.rs  mod.rs  screenshot.rs
apps/extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
docs/: 00-overview.md  01-system-architecture.md  02-database-schema.md  03-api-design.md  04-desktop-agent.md  05-queue-architecture.md  06-reporting.md  07-storage.md  08-security.md  09-deployment.md  10-scaling.md  11-roadmap.md  12-monorepo.md  13-opscore-feature-roadmap.md  14-deploy-and-download-progress.md  15-rebuild-runbook.md  HANDOFF.md  STATUS.md  feature-matrix.md  project-brief.md
infra/compose/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  otel-collector.yaml
infra/nginx/: README.md  api  timepro.systemsd.co.conf  web
(+101 files in other folders)
