[package]
name = "timepro-agent"
version = "0.1.0"
description = "TimePro desktop agent"
authors = ["TimePro"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "timepro_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# capture
xcap = "0.9"                # cross-platform screen capture (mac/win/linux)
user-idle = "0.6"           # cross-platform idle detection
active-win-pos-rs = "0.8"   # active window / app name (mac/win/linux)
image = { version = "0.25", default-features = false, features = ["png"] }

# sync
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# open the default browser for the "view online" handoff
open = "5"

# runtime + utils
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"

[features]
# Default Tauri config; release should bundle as staticlib for size.
custom-protocol = ["tauri/custom-protocol"]
